# markdown-to-presentation

./: .gitignore  LICENSE  README.md  m2p.cabal  md2p.cabal  stack.yaml
input/: Example.md
output/: index.html
output/css/: github.css  style.css
output/js/: present.js
src/: Main.hs
