Name:               markdown-to-presentation
Version:             0.0.1
Synopsis:           markdown to html
License:             BSD3
Author:              soupi
Maintainer:         soupiral@gmail.com
Stability:            Experimental
Category:           Text
Build-type:          Simple
Cabal-version:      >=1.2

Executable m2p
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base,
    blaze-html,
    text,
    markdown


  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
